SET(LIB_HELLOWORLD_SRC HelloWorld.cpp)

ADD_LIBRARY(helloworld_static STATIC ${LIB_HELLOWORLD_SRC})
SET_TARGET_PROPERTIES(helloworld_static PROPERTIES OUTPUT_NAME "helloworld")
SET_TARGET_PROPERTIES(helloworld_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(helloworld_shared SHARED ${LIB_HELLOWORLD_SRC})
SET_TARGET_PROPERTIES(helloworld_shared PROPERTIES OUTPUT_NAME "helloworld")
SET_TARGET_PROPERTIES(helloworld_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(FILES HelloWorld.h DESTINATION include/helloworld)
INSTALL(TARGETS helloworld_static LIBRARY ARCHIVE DESTINATION lib)
INSTALL(TARGETS helloworld_shared LIBRARY DESTINATION lib)